--- a/About.css
+++ b/About.css
@@ -1,137 +1,41 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 703px;
+  min-height: 537px;
 }
 
-.u-section-1 .u-text-1 {
-  font-weight: 700;
-  width: 580px;
+.u-section-1 .u-image-1 {
+  width: 291px;
+  height: 291px;
   margin: 60px auto 0;
 }
 
-.u-section-1 .u-group-elements-1 {
-  width: 964px;
-  min-height: 351px;
-  height: auto;
-  margin: 52px auto 60px;
-}
-
-.u-section-1 .u-text-2 {
-  font-size: 1.125rem;
-  margin: 0 384px 0 0;
-}
-
-.u-section-1 .u-text-3 {
-  font-size: 1.125rem;
-  margin: 20px 224px 0 0;
-}
-
-.u-section-1 .u-text-4 {
-  font-size: 1.125rem;
-  margin: 20px 159px 0 0;
-}
-
-.u-section-1 .u-text-5 {
-  font-size: 1.125rem;
-  margin: 20px 60px 0 0;
-}
-
-.u-section-1 .u-text-6 {
-  font-size: 1.125rem;
-  margin: 20px 0 0;
-}
-
-.u-section-1 .u-text-7 {
-  font-size: 1.125rem;
-  margin: 20px 159px 0 0;
-}
-
-.u-section-1 .u-text-8 {
-  font-size: 1.125rem;
-  margin: 20px 159px 0 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-group-elements-1 {
-    width: 940px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-group-elements-1 {
-    width: 720px;
-    min-height: 435px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-7 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-8 {
-    width: auto;
-    margin-right: 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-1 .u-text-1 {
-    width: 540px;
-  }
-
-  .u-section-1 .u-group-elements-1 {
-    width: 540px;
-    min-height: 519px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-text-1 {
-    width: 340px;
-  }
-
-  .u-section-1 .u-group-elements-1 {
-    width: 340px;
-  }
+.u-section-1 .u-text-1 {
+  font-size: 1.25rem;
+  margin: 30px auto 60px;
 }.u-section-2 .u-sheet-1 {
-  min-height: 598px;
+  min-height: 795px;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 700;
   line-height: 1.2;
   width: 225px;
-  margin: 94px auto 0;
+  font-size: 2.25rem;
+  margin: 60px auto 0;
 }
 
 .u-section-2 .u-list-1 {
-  margin-top: 13px;
-  margin-bottom: 60px;
+  width: 770px;
+  margin: 64px auto 60px;
 }
 
 .u-section-2 .u-repeater-1 {
   grid-template-columns: 50% 50%;
   min-height: 388px;
   grid-gap: 0px 0px;
+}
+
+.u-section-2 .u-list-item-1 {
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -147,13 +51,19 @@
 }
 
 .u-section-2 .u-text-2 {
-  font-weight: 700;
+  font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px auto 0;
 }
 
 .u-section-2 .u-text-3 {
   font-size: 1rem;
   margin: 37px 0 0;
+}
+
+.u-section-2 .u-list-item-2 {
+  --animation-custom_in-scale: 1;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -169,7 +79,9 @@
 }
 
 .u-section-2 .u-text-4 {
-  font-weight: 700;
+  font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px auto 0;
 }
 
@@ -178,15 +90,13 @@
   margin: 37px 0 0;
 }
 
-@media (max-width: 1199px) {
-  .u-section-2 .u-repeater-1 {
-    min-height: 320px;
-  }
-}
-
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
     min-height: 910px;
+  }
+
+  .u-section-2 .u-list-1 {
+    width: 720px;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -196,6 +106,10 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-list-1 {
+    width: 540px;
+  }
+
   .u-section-2 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -213,316 +127,117 @@
   }
 
   .u-section-2 .u-text-1 {
-    width: 154px;
+    width: 247px;
+    font-size: 1.5rem;
+  }
+
+  .u-section-2 .u-list-1 {
+    width: 340px;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.25rem;
+  }
+
+  .u-section-2 .u-text-4 {
+    font-size: 1.25rem;
   }
 }.u-section-3 .u-sheet-1 {
-  min-height: 1123px;
+  min-height: 652px;
 }
 
-.u-section-3 .u-layout-wrap-1 {
-  margin: 190px 0 60px;
+.u-section-3 .u-text-1 {
+  font-weight: 700;
+  line-height: 1.2;
+  width: 244px;
+  margin: 183px auto 0;
 }
 
-.u-section-3 .u-layout-cell-1 {
-  min-height: 230px;
+.u-section-3 .u-list-1 {
+  grid-template-rows: auto;
+  width: 80%;
+  margin: 0 auto 60px;
+}
+
+.u-section-3 .u-repeater-1 {
+  grid-template-columns: 33.3333% 33.3333% 33.3333%;
+  grid-gap: 0px 0px;
+  min-height: 281px;
 }
 
 .u-section-3 .u-container-layout-1 {
   padding: 30px;
 }
 
-.u-section-3 .u-text-1 {
-  font-weight: bold;
-  margin: 0 0 0 auto;
-}
-
 .u-section-3 .u-text-2 {
-  margin: 20px 0 0 auto;
+  font-size: 1.25rem;
+  font-style: italic;
+  margin: 0 1px;
 }
 
-.u-section-3 .u-layout-cell-2 {
-  min-height: 230px;
+.u-section-3 .u-text-3 {
+  margin: 30px 0 0;
 }
 
 .u-section-3 .u-container-layout-2 {
-  padding: 10px;
+  padding: 30px;
 }
 
-.u-section-3 .u-image-1 {
-  width: 200px;
-  height: 200px;
-  object-position: 100% 50%;
-  margin: 0 auto;
+.u-section-3 .u-text-4 {
+  font-size: 1.25rem;
+  font-style: italic;
+  margin: 0 1px;
 }
 
-.u-section-3 .u-layout-cell-3 {
-  min-height: 230px;
+.u-section-3 .u-text-5 {
+  margin: 30px 0 0;
 }
 
 .u-section-3 .u-container-layout-3 {
   padding: 30px;
 }
 
-.u-section-3 .u-social-icons-1 {
-  height: 85px;
-  min-height: 16px;
-  width: 85px;
-  min-width: 16px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-icon-1 {
-  height: 100%;
-}
-
-.u-section-3 .u-layout-cell-4 {
-  min-height: 230px;
-}
-
-.u-section-3 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-3 .u-social-icons-2 {
-  height: 85px;
-  min-height: 16px;
-  width: 85px;
-  min-width: 16px;
-  margin: 0 0 0 auto;
-}
-
-.u-section-3 .u-icon-2 {
-  height: 100%;
-}
-
-.u-section-3 .u-layout-cell-5 {
-  min-height: 230px;
-}
-
-.u-section-3 .u-container-layout-5 {
-  padding: 10px;
-}
-
-.u-section-3 .u-image-2 {
-  width: 205px;
-  height: 205px;
-  object-position: 0% 50%;
-  margin: 0 auto;
-}
-
-.u-section-3 .u-layout-cell-6 {
-  min-height: 230px;
-}
-
-.u-section-3 .u-container-layout-6 {
-  padding: 30px;
-}
-
-.u-section-3 .u-text-3 {
-  font-weight: 700;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-4 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-3 .u-layout-cell-7 {
-  min-height: 230px;
-}
-
-.u-section-3 .u-container-layout-7 {
-  padding: 30px;
-}
-
-.u-section-3 .u-text-5 {
-  font-weight: 700;
-  margin: 13px 0 0 auto;
-}
-
 .u-section-3 .u-text-6 {
-  margin: 21px 0 0 auto;
+  font-size: 1.25rem;
+  font-style: italic;
+  margin: 0 1px;
 }
 
-.u-section-3 .u-layout-cell-8 {
-  min-height: 230px;
-}
-
-.u-section-3 .u-container-layout-8 {
-  padding: 10px;
-}
-
-.u-section-3 .u-image-3 {
-  width: 203px;
-  height: 203px;
-  object-position: 8.62% 50%;
-  margin: 3px auto 0;
-}
-
-.u-section-3 .u-layout-cell-9 {
-  min-height: 230px;
-}
-
-.u-section-3 .u-container-layout-9 {
-  padding: 30px;
-}
-
-.u-section-3 .u-social-icons-3 {
-  height: 85px;
-  min-height: 16px;
-  width: 85px;
-  min-width: 16px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-icon-3 {
-  height: 100%;
+.u-section-3 .u-text-7 {
+  margin: 30px 0 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 759px;
+  .u-section-3 .u-text-1 {
+    margin-top: 7px;
   }
 
-  .u-section-3 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-3 .u-list-1 {
+    margin-top: 20px;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-image-1 {
-    width: 205px;
-    height: 205px;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-layout-cell-4 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-layout-cell-5 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-image-2 {
-    width: 210px;
-    height: 210px;
-  }
-
-  .u-section-3 .u-layout-cell-6 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-layout-cell-7 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-layout-cell-8 {
-    min-height: 190px;
-  }
-
-  .u-section-3 .u-image-3 {
-    width: 210px;
-    height: 210px;
-  }
-
-  .u-section-3 .u-layout-cell-9 {
-    min-height: 190px;
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 50% 50%;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 871px;
+  .u-section-3 .u-text-1 {
+    margin-top: 391px;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 306px;
-  }
-
-  .u-section-3 .u-container-layout-2 {
-    padding-left: 9px;
-    padding-right: 9px;
-  }
-
-  .u-section-3 .u-image-1 {
-    width: 149px;
-    height: 149px;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 146px;
-  }
-
-  .u-section-3 .u-layout-cell-4 {
-    min-height: 146px;
-  }
-
-  .u-section-3 .u-layout-cell-5 {
-    min-height: 306px;
-  }
-
-  .u-section-3 .u-image-2 {
-    width: 143px;
-    height: 143px;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-layout-cell-6 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-layout-cell-7 {
-    min-height: 100px;
-  }
-
-  .u-section-3 .u-layout-cell-8 {
-    min-height: 306px;
-  }
-
-  .u-section-3 .u-image-3 {
-    width: 143px;
-    height: 143px;
-  }
-
-  .u-section-3 .u-layout-cell-9 {
-    min-height: 146px;
+  .u-section-3 .u-repeater-1 {
+    min-height: 843px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 1613px;
+  .u-section-3 .u-list-1 {
+    margin-bottom: 0;
   }
 
-  .u-section-3 .u-layout-wrap-1 {
-    margin-top: -11px;
-    margin-bottom: -11px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 178px;
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 100%;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -530,140 +245,281 @@
     padding-right: 10px;
   }
 
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 169px;
-  }
-
-  .u-section-3 .u-image-1 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 145px;
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-3 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
-
-  .u-section-3 .u-social-icons-1 {
-    margin-right: 0;
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-layout-cell-4 {
-    min-height: 145px;
-    order: 2;
-  }
-
-  .u-section-3 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-social-icons-2 {
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-layout-cell-5 {
-    min-height: 163px;
-    order: 1;
-  }
-
-  .u-section-3 .u-image-2 {
-    margin-right: 0;
-    margin-left: auto;
-  }
-
-  .u-section-3 .u-layout-cell-6 {
-    min-height: 178px;
-    order: 0;
-  }
-
-  .u-section-3 .u-container-layout-6 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-layout-cell-7 {
-    min-height: 192px;
-  }
-
-  .u-section-3 .u-container-layout-7 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-layout-cell-8 {
-    min-height: 178px;
-  }
-
-  .u-section-3 .u-image-3 {
-    margin-left: 0;
-  }
-
-  .u-section-3 .u-layout-cell-9 {
-    min-height: 71px;
-  }
-
-  .u-section-3 .u-container-layout-9 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-3 .u-social-icons-3 {
-    margin-right: 0;
-    margin-left: auto;
-  }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1446px;
+    min-height: 462px;
   }
 
-  .u-section-3 .u-layout-wrap-1 {
-    margin-top: 190px;
+  .u-section-3 .u-text-1 {
+    margin-top: 57px;
+  }
+
+  .u-section-3 .u-list-1 {
+    margin-top: 48px;
     margin-bottom: 60px;
     margin-right: initial;
     margin-left: initial;
+    width: auto;
   }
 
-  .u-section-3 .u-layout-cell-1 {
-    min-height: 100px;
+  .u-section-3 .u-repeater-1 {
+    grid-template-columns: 33.3333% 33.3333% 33.3333%;
+    min-height: 255px;
   }
 
-  .u-section-3 .u-layout-cell-2 {
-    min-height: 106px;
+  .u-section-3 .u-text-2 {
+    font-size: 1rem;
   }
 
-  .u-section-3 .u-layout-cell-3 {
-    min-height: 91px;
+  .u-section-3 .u-text-3 {
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .u-section-3 .u-layout-cell-4 {
-    min-height: 91px;
+  .u-section-3 .u-text-4 {
+    font-size: 1rem;
   }
 
-  .u-section-3 .u-layout-cell-5 {
-    min-height: 103px;
+  .u-section-3 .u-text-5 {
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .u-section-3 .u-layout-cell-6 {
-    min-height: 100px;
+  .u-section-3 .u-text-6 {
+    font-size: 1rem;
   }
 
-  .u-section-3 .u-layout-cell-7 {
-    min-height: 100px;
+  .u-section-3 .u-text-7 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}.u-section-4 .u-sheet-1 {
+  min-height: 666px;
+}
+
+.u-section-4 .u-text-1 {
+  font-weight: 700;
+  width: 580px;
+  margin: 60px auto 0;
+}
+
+.u-section-4 .u-text-2 {
+  font-size: 1.125rem;
+  margin: 52px 231px 0 88px;
+}
+
+.u-section-4 .u-text-3 {
+  font-size: 1.125rem;
+  margin: 20px 312px 0 88px;
+}
+
+.u-section-4 .u-text-4 {
+  font-size: 1.125rem;
+  margin: 20px 117px 0 88px;
+}
+
+.u-section-4 .u-text-5 {
+  font-size: 1.125rem;
+  margin: 20px 280px 0 88px;
+}
+
+.u-section-4 .u-text-6 {
+  font-size: 1.125rem;
+  margin: 20px 88px 0;
+}
+
+.u-section-4 .u-text-7 {
+  font-size: 1.125rem;
+  margin: 20px 247px 60px 88px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-text-2 {
+    margin-right: 119px;
+    margin-left: 0;
   }
 
-  .u-section-3 .u-layout-cell-8 {
-    min-height: 112px;
+  .u-section-4 .u-text-3 {
+    margin-right: 200px;
+    margin-left: 0;
   }
 
-  .u-section-3 .u-layout-cell-9 {
-    min-height: 45px;
+  .u-section-4 .u-text-4 {
+    margin-right: 5px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-right: 168px;
+    margin-left: 0;
+  }
+
+  .u-section-4 .u-text-6 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-right: 135px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-3 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-4 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-5 {
+    margin-right: 0;
+  }
+
+  .u-section-4 .u-text-7 {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-text-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-text-1 {
+    width: 340px;
+  }
+}.u-section-5 .u-sheet-1 {
+  min-height: 743px;
+}
+
+.u-section-5 .u-text-1 {
+  font-weight: 700;
+  width: 580px;
+  margin: 60px auto 0;
+}
+
+.u-section-5 .u-group-elements-1 {
+  width: 964px;
+  min-height: 351px;
+  height: auto;
+  margin: 52px auto 60px;
+}
+
+.u-section-5 .u-text-2 {
+  font-size: 1.125rem;
+  margin: 0 384px 0 0;
+}
+
+.u-section-5 .u-text-3 {
+  font-size: 1.125rem;
+  margin: 20px 224px 0 0;
+}
+
+.u-section-5 .u-text-4 {
+  font-size: 1.125rem;
+  margin: 20px 159px 0 0;
+}
+
+.u-section-5 .u-text-5 {
+  font-size: 1.125rem;
+  margin: 20px 60px 0 0;
+}
+
+.u-section-5 .u-text-6 {
+  font-size: 1.125rem;
+  margin: 20px 0 0;
+}
+
+.u-section-5 .u-text-7 {
+  font-size: 1.125rem;
+  margin: 20px 159px 0 0;
+}
+
+.u-section-5 .u-text-8 {
+  font-size: 1.125rem;
+  margin: 20px 159px 0 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-group-elements-1 {
+    width: 940px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-group-elements-1 {
+    width: 720px;
+    min-height: 435px;
+  }
+
+  .u-section-5 .u-text-2 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-3 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-4 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-5 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-7 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-text-8 {
+    width: auto;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-text-1 {
+    width: 540px;
+  }
+
+  .u-section-5 .u-group-elements-1 {
+    width: 540px;
+    min-height: 519px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-text-1 {
+    width: 340px;
+  }
+
+  .u-section-5 .u-group-elements-1 {
+    width: 340px;
   }
 }
