--- a/Members.css
+++ b/Members.css
@@ -4,19 +4,20 @@
 
 .u-section-1 .u-text-1 {
   font-weight: 700;
+  text-decoration: none solid rgb(17, 17, 17);
   margin: 60px auto 0;
 }
 
 .u-section-1 .u-list-1 {
   grid-template-rows: auto auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  width: 1110px;
+  margin: 60px auto;
 }
 
 .u-section-1 .u-repeater-1 {
   grid-template-columns: 33.3333% 33.3333% 33.3333%;
   grid-gap: 0px 0px;
-  min-height: 654px;
+  min-height: 748px;
 }
 
 .u-section-1 .u-list-item-1 {
@@ -32,12 +33,13 @@
   height: 150px;
   background-image: url("images/T_PJA.png");
   background-position: 50% 50%;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -47,9 +49,16 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-icon-1 {
+  margin-right: 5px;
+}
+
+.u-section-1 .u-btn-1 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-list-item-2 {
@@ -65,12 +74,13 @@
   height: 150px;
   background-image: url("images/T_JYS.png");
   background-position: 50% 50%;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-5 {
-  font-weight: 700;
   font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -80,9 +90,16 @@
 }
 
 .u-section-1 .u-text-7 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-icon-2 {
+  margin-right: 5px;
+}
+
+.u-section-1 .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-list-item-3 {
@@ -98,12 +115,13 @@
   height: 150px;
   background-image: url("images/T_KYK.png");
   background-position: 50% 50%;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-8 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -113,9 +131,16 @@
 }
 
 .u-section-1 .u-text-10 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-icon-3 {
+  margin-right: 5px;
+}
+
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-list-item-4 {
@@ -131,12 +156,13 @@
   height: 150px;
   background-image: url("images/T_KDY.png");
   background-position: 50% 50%;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-11 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -146,9 +172,16 @@
 }
 
 .u-section-1 .u-text-13 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-icon-4 {
+  margin-right: 5px;
+}
+
+.u-section-1 .u-btn-4 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-list-item-5 {
@@ -164,12 +197,13 @@
   height: 150px;
   background-image: url("images/T_LSY.jpeg");
   background-position: 50% 50%;
-  margin: 20px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-text-14 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -179,25 +213,44 @@
 }
 
 .u-section-1 .u-text-16 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-icon-5 {
+  margin-right: 5px;
+}
+
+.u-section-1 .u-btn-5 {
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-list-1 {
+    width: 940px;
+  }
+
   .u-section-1 .u-repeater-1 {
-    min-height: 539px;
+    min-height: 633px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-list-1 {
+    width: 720px;
+  }
+
   .u-section-1 .u-repeater-1 {
     grid-template-columns: 50% 50%;
-    min-height: 929px;
+    min-height: 1091px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-list-1 {
+    width: 540px;
+  }
+
   .u-section-1 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -229,6 +282,16 @@
     margin-left: calc(((100% - 340px) / 2) + 122px);
   }
 
+  .u-section-1 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
   .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -254,24 +317,25 @@
     padding-right: 10px;
   }
 } .u-section-2 {
-  min-height: 1055px;
+  min-height: 663px;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 700;
+  text-decoration: none solid rgb(17, 17, 17);
   margin: 60px auto 0;
 }
 
 .u-section-2 .u-list-1 {
   grid-template-rows: auto auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  width: 1110px;
+  margin: 60px auto;
 }
 
 .u-section-2 .u-repeater-1 {
   grid-template-columns: 33.3333% 33.3333% 33.3333%;
   grid-gap: 0px 0px;
-  min-height: 604px;
+  min-height: 369px;
 }
 
 .u-section-2 .u-list-item-1 {
@@ -292,16 +356,28 @@
 
 .u-section-2 .u-text-2 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-2 .u-text-3 {
-  margin: 20px 0 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-4 {
-  margin: 1px 0 0;
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-icon-1 {
+  margin-right: 5px;
+}
+
+.u-section-2 .u-btn-1 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-2 .u-list-item-2 {
@@ -321,17 +397,29 @@
 }
 
 .u-section-2 .u-text-5 {
-  font-weight: 700;
   font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-2 .u-text-6 {
-  margin: 20px 0 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-7 {
-  margin: 1px 0 0;
+  margin: 20px 0 0;
+}
+
+.u-section-2 .u-icon-2 {
+  margin-right: 5px;
+}
+
+.u-section-2 .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-2 .u-list-item-3 {
@@ -352,62 +440,56 @@
 
 .u-section-2 .u-text-8 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-2 .u-text-9 {
-  margin: 20px 0 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .u-section-2 .u-text-10 {
-  margin: 1px 0 0;
-}
-
-.u-section-2 .u-list-item-4 {
-  background-size: auto;
-}
-
-.u-section-2 .u-container-layout-4 {
-  padding: 30px;
-}
-
-.u-section-2 .u-image-4 {
-  width: 150px;
-  height: 150px;
-  background-image: url("images/S_KKH.jpeg");
-  background-position: 50% 50%;
-  margin: 20px auto 0;
-}
-
-.u-section-2 .u-text-11 {
-  font-size: 1.5rem;
-  font-weight: 700;
   margin: 20px 0 0;
 }
 
-.u-section-2 .u-text-12 {
-  margin: 20px 0 0;
+.u-section-2 .u-icon-3 {
+  margin-right: 5px;
 }
 
-.u-section-2 .u-text-13 {
-  margin: 1px 0 0;
+.u-section-2 .u-btn-3 {
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
+  .u-section-2 .u-list-1 {
+    width: 940px;
+  }
+
   .u-section-2 .u-repeater-1 {
-    min-height: 498px;
+    min-height: 312px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-2 .u-list-1 {
+    width: 720px;
+  }
+
   .u-section-2 .u-repeater-1 {
     grid-template-columns: 50% 50%;
-    min-height: 572px;
+    min-height: 717px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-list-1 {
+    width: 540px;
+  }
+
   .u-section-2 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -419,11 +501,6 @@
   }
 
   .u-section-2 .u-container-layout-3 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -431,7 +508,7 @@
 
 @media (max-width: 575px) {
    .u-section-2 {
-    min-height: 100vh;
+    min-height: 1538px;
   }
 
   .u-section-2 .u-text-1 {
@@ -439,7 +516,14 @@
   }
 
   .u-section-2 .u-list-1 {
-    margin-bottom: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    grid-template-columns: 100%;
+    min-height: 1332px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -453,11 +537,6 @@
   }
 
   .u-section-2 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -467,19 +546,20 @@
 
 .u-section-3 .u-text-1 {
   font-weight: 700;
+  text-decoration: none solid rgb(17, 17, 17);
   margin: 60px auto 0;
 }
 
 .u-section-3 .u-list-1 {
   grid-template-rows: auto auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  width: 80%;
+  margin: 60px auto;
 }
 
 .u-section-3 .u-repeater-1 {
-  grid-template-columns: 100%;
+  grid-template-columns: 50% 50%;
   grid-gap: 0px 0px;
-  min-height: 231px;
+  min-height: 369px;
 }
 
 .u-section-3 .u-list-item-1 {
@@ -493,14 +573,15 @@
 .u-section-3 .u-image-1 {
   width: 150px;
   height: 150px;
-  background-image: url("images/S_LMR.jpg");
+  background-image: url("images/S_KKH.jpeg");
   background-position: 50% 50%;
   margin: 20px auto 0;
 }
 
 .u-section-3 .u-text-2 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -508,7 +589,55 @@
   margin: 20px 0 0;
 }
 
+.u-section-3 .u-text-4 {
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-icon-1 {
+  margin-right: 5px;
+}
+
 .u-section-3 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-3 .u-list-item-2 {
+  background-size: auto;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-2 {
+  width: 150px;
+  height: 150px;
+  background-image: url("images/S_LMR.jpg");
+  background-position: 50% 50%;
+  margin: 20px auto 0;
+}
+
+.u-section-3 .u-text-5 {
+  font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-text-6 {
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-text-7 {
+  margin: 20px 0 0;
+}
+
+.u-section-3 .u-icon-2 {
+  margin-right: 5px;
+}
+
+.u-section-3 .u-btn-2 {
   background-image: none;
   padding: 0;
 }
@@ -521,16 +650,41 @@
   .u-section-3 .u-repeater-1 {
     grid-template-columns: 33.3333% 33.3333% 33.3333%;
   }
+
+  .u-section-3 .u-image-1 {
+    width: 20px;
+    height: 20px;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-repeater-1 {
     grid-template-columns: 50% 50%;
   }
+
+  .u-section-3 .u-image-1 {
+    width: 150px;
+    height: 150px;
+  }
+
+  .u-section-3 .u-image-2 {
+    width: 150px;
+    height: 150px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-container-layout-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -545,19 +699,25 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 } .u-section-4 {
   min-height: 732px;
 }
 
 .u-section-4 .u-text-1 {
   font-weight: 700;
+  text-decoration: none solid rgb(17, 17, 17);
   margin: 60px auto 0;
 }
 
 .u-section-4 .u-list-1 {
   grid-template-rows: auto auto;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  width: 1110px;
+  margin: 60px auto;
 }
 
 .u-section-4 .u-repeater-1 {
@@ -584,12 +744,17 @@
 
 .u-section-4 .u-text-2 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-3 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-1 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-2 {
@@ -609,13 +774,18 @@
 }
 
 .u-section-4 .u-text-4 {
-  font-weight: 700;
   font-size: 1.5rem;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-5 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-2 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-3 {
@@ -636,12 +806,17 @@
 
 .u-section-4 .u-text-6 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-7 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-3 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-4 {
@@ -662,12 +837,17 @@
 
 .u-section-4 .u-text-8 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-9 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-4 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-5 {
@@ -688,12 +868,17 @@
 
 .u-section-4 .u-text-10 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-11 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-5 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-6 {
@@ -714,12 +899,17 @@
 
 .u-section-4 .u-text-12 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-13 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-6 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-7 {
@@ -740,12 +930,17 @@
 
 .u-section-4 .u-text-14 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-15 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-7 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-8 {
@@ -766,12 +961,17 @@
 
 .u-section-4 .u-text-16 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-17 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-8 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-9 {
@@ -792,12 +992,17 @@
 
 .u-section-4 .u-text-18 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-19 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-9 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-10 {
@@ -818,12 +1023,17 @@
 
 .u-section-4 .u-text-20 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-21 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-10 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-11 {
@@ -844,12 +1054,17 @@
 
 .u-section-4 .u-text-22 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-23 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-11 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-12 {
@@ -870,12 +1085,17 @@
 
 .u-section-4 .u-text-24 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-25 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-12 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-13 {
@@ -896,12 +1116,17 @@
 
 .u-section-4 .u-text-26 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
 .u-section-4 .u-text-27 {
   margin: 20px 0 0;
+}
+
+.u-section-4 .u-icon-13 {
+  margin-right: 5px;
 }
 
 .u-section-4 .u-list-item-14 {
@@ -922,7 +1147,8 @@
 
 .u-section-4 .u-text-28 {
   font-size: 1.5rem;
-  font-weight: 700;
+  text-decoration: underline !important;
+  font-weight: normal;
   margin: 20px 0 0;
 }
 
@@ -930,20 +1156,36 @@
   margin: 20px 0 0;
 }
 
+.u-section-4 .u-icon-14 {
+  margin-right: 5px;
+}
+
 @media (max-width: 1199px) {
+  .u-section-4 .u-list-1 {
+    width: 940px;
+  }
+
   .u-section-4 .u-repeater-1 {
-    min-height: 1421px;
+    min-height: 1459px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-4 .u-list-1 {
+    width: 720px;
+  }
+
   .u-section-4 .u-repeater-1 {
     grid-template-columns: 50% 50%;
-    min-height: 2286px;
+    min-height: 2347px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-4 .u-list-1 {
+    width: 540px;
+  }
+
   .u-section-4 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
@@ -1018,6 +1260,17 @@
 @media (max-width: 575px) {
   .u-section-4 .u-text-1 {
     margin-left: calc(((100% - 340px) / 2) + 132px);
+  }
+
+  .u-section-4 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-4 .u-repeater-1 {
+    grid-template-columns: 100%;
+    min-height: 2518px;
   }
 
   .u-section-4 .u-container-layout-1 {
